kanc_pamoi/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/heterogeneous/explicit_before_unlabeled.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let f = fun _(yellow~y: Nat, x: Nat): Nat {
    Nat.o
};
